--- a/hawc/apps/eco/templates/eco/fragments/result_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/result_row.html
@@ -12,3 +12,4 @@
   <td>{{object.derived_value }}</td>
   {% include "common/fragments/_object_row.html" with app="eco" model="result" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="result" %}
