--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -968,9 +968,18 @@ div.udf-info-row>p, div.udf-info-row>div.card>p {
 .show-only-child {
     display: none;
 }
-.show-only-child:only-child {
+.show-only-child:only-child, .show-only-child:has(+.create-row.hidden) {
     display: revert;
 }
+tr+tr.show-only-child {
+    display: none !important;
+}
+/* .show-only-child-new {
+    display: none;
+}
+.show-only-child-new:only-child, .show-only-child-new:has(+.create-row) {
+    display: revert;
+} */
 
 /* table column text alignment */
 .col-r-1 td:nth-child(1),
