--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -971,7 +971,7 @@ div.udf-info-row>p, div.udf-info-row>div.card>p {
 .show-only-child:only-child, .show-only-child:has(+.create-row.hidden) {
     display: revert;
 }
-tr+tr.show-only-child {
+tr+tr.show-only-child, div+div.show-only-child {
     display: none !important;
 }
 /* .show-only-child-new {
