--- a/hawc/apps/epiv2/templates/epiv2/fragments/chemical_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/chemical_row.html
@@ -3,3 +3,4 @@
   <td>{{object.dsstox.verbose_link|safe|default:"-"   }}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="chemical" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="chemical" %}
