--- a/hawc/apps/epiv2/templates/epiv2/fragments/exposure_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/exposure_row.html
@@ -12,3 +12,4 @@
   <td>{{object.measurement_timing|default:"-"}}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="exposure" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="exposure" %}
