--- a/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
@@ -6,3 +6,4 @@
   <td>{{object.comments|default:"-"}}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="exposurelevel" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="exposurelevel" %}
