--- a/hawc/apps/epiv2/templates/epiv2/fragments/outcome_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/outcome_row.html
@@ -5,3 +5,4 @@
   <td>{{object.endpoint}}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="outcome" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="outcome" %}
