--- a/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
@@ -9,3 +9,4 @@
   <td>{{object.comments|default:"-"}}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="adjustmentfactor" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="adjustmentfactor" %}
