--- a/hawc/apps/epiv2/templates/epiv2/fragments/data_extraction_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/data_extraction_row.html
@@ -10,3 +10,4 @@
   <td>{{object.comments|default:"-"}}</td>
   {% include "common/fragments/_object_row.html" with app="epiv2" model="dataextraction" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="dataextraction" %}
