--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -29,7 +29,8 @@
 
 {% block extrajs %}
   {{ smart_tag_form.media }}
-  <script id="config" type="text/json" charset="utf-8">
+  {{ config|json_script:"config" }}
+  {% comment %} <script id="config" type="text/json" charset="utf-8">
     {
       "assessment": {{assessment.id}},
       "crud": "{{crud}}",
@@ -47,7 +48,7 @@
       "clear_cache_url": "{{assessment.get_clear_cache_url}}"
       {% if api_url %},"api_url": "{{api_url|safe}}"{% endif %}
     }
-  </script>
+  </script> {% endcomment %}
   <script type="text/javascript">
     window.app.startup("summaryFormsStartup", function(summaryForms){
       const config = window.app.getConfig(),
