--- a/hawc/apps/common/templates/common/crispy_layout_filter_field.html
+++ b/hawc/apps/common/templates/common/crispy_layout_filter_field.html
@@ -2,16 +2,18 @@
 {% load crispy_forms_filters %}
 {% comment %} Adapted from https://github.com/django-crispy-forms/crispy-bootstrap4/blob/main/crispy_bootstrap4/templates/bootstrap4/field.html {% endcomment %}
 <div id="div_{{ field.auto_id }}" class="form-group mb-0">
+  <label for="{{ field.id_for_label }}" class="sr-only">{{ field.label }}</label>
+  <div id="{{ field.id_for_label }}_helptext" class="sr-only">{{ field.help_text }}</div>
   <div class="input-group flex-nowrap">
     {% if expandable %}
       <div class="input-group-prepend">
-        <a id="ff-expand-form-toggle" class="btn btn-secondary d-flex align-items-center" data-toggle="collapse" data-target="#ff-expand-form" title="Toggle advanced options"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+        <a id="ff-expand-form-toggle" class="btn btn-secondary d-flex align-items-center {% if form.data.is_expanded != 'true' %} collapsed {% endif %}" data-toggle="collapse" data-target="#ff-expand-form" title="Toggle advanced options"><i class="fa fa-caret-down collapsible-icon" aria-hidden="true"></i></a>
       </div>
     {% endif %}
-    {% if field|is_select %}
-      {% crispy_field field 'class' 'custom-select' %}
+    {% if field.errors %}
+      {% crispy_field field 'class' 'form-control is-invalid z-top' 'placeholder' field.help_text %}
     {% else %}
-      <input type="text" name="{% if field.name|wordcount > 1 %}{{ field.name|slugify }}{% else %}{{ field.name }}{% endif %}"  class="form-control {% if field.errors %} is-invalid {% endif %}" placeholder="{{field.help_text}}" aria-label="{{field.label}}" value="{% if field.value %}{{ field.value }}{% endif %}" {{ field.flat_attrs }}>
+      {% crispy_field field 'class' 'form-control h-fit-content' 'placeholder' field.help_text %}
     {% endif %}
     <div class="input-group-append">
       {% for field in appended_fields %}
@@ -26,8 +28,7 @@
             {% endif %}
           </div>
         {% elif field|is_select and use_custom_control %}
-          <div title="{{field.help_text}}">
-            {{field.widget}}
+          <div {% if field.errors %} title="{% for error in field.errors %} {{error}} {% endfor %}" {% else %} title="{{field.help_text}} {% endif %}">
             {% if field.errors %}
               {% crispy_field field 'class' 'custom-select form-sm-field is-invalid' 'placeholder' field.help_text %}
             {% else %}
@@ -40,6 +41,12 @@
       <button type="submit" name="save" class="btn btn-primary px-5" title="Apply filters"><i class="fa fa-search" aria-hidden="true"></i></button>
     </div>
   </div>
+  {% for field in appended_fields %}
+    {% if not field|is_checkbox %}
+      <label for="{{ field.id_for_label }}" class="custom-control-label sr-only">{{ field.label }}</label>
+      <div id="{{ field.id_for_label }}_helptext" class="sr-only">{{ field.help_text }}</div>
+    {% endif %}
+  {% endfor %}
 </div>
 {% if expandable %}
   <script>
