--- a/hawc/apps/assessment/templates/assessment/label_list.html
+++ b/hawc/apps/assessment/templates/assessment/label_list.html
@@ -12,13 +12,7 @@
     </button>
   </div>
   <div>
-    <div class="my-2 box-shadow-minor list-group py-0" id="label-listgroup">
-      {% for object in object_list %}
-        {% include "assessment/fragments/label_row.html" with canEdit=True %}
-      {% endfor %}
-      <div class="alert alert-info text-center show-only-child my-0">No labels created (yet).</div>
-      <div class="create-row hidden"></div>
-    </div>
+    {% include "assessment/fragments/label_list.html" %}
   </div>
 {% endblock content %}
 
@@ -30,7 +24,6 @@
       e.stopPropagation();
     }
     $(window).ready(function() {
-      window.app.HAWCUtils.addScrollHtmx("label-edit-row", "label-row", "label-conf-delete");
       $(".label").on("click", linkLabel);
     });
     $("body").on("htmx:afterSwap", function(evt) {
