--- a/hawc/apps/assessment/templates/assessment/fragments/attachment_edit_row.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/attachment_edit_row.html
@@ -1,5 +1,5 @@
 
-<tr hx-target="this" hx-swap="outerHTML" class="attachment-edit-row">
+<tr hx-target="this" hx-swap="outerHTML" class="attachment-edit-row {% if form and not form.instance.id %} create-row {% endif %}">
   {% if form %}
     <td colspan="3" class="bg-lightblue">
       <form class="attachment-form pad-form p-3" method="post" enctype="multipart/form-data">
@@ -24,7 +24,7 @@
             </button>
             <button class="btn btn-light"
                     type='button'
-                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.attachment-edit-row'), true)">
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.attachment-edit-row'), false)">
               Cancel
             </button>
           {% endif %}
