Add !important to hidden

--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -86,7 +86,7 @@ tfoot > tr > td {
     border-top: none;
 }
 .hidden {
-    display: none;
+    display: none !important;
 }
 .resize-y {
     overflow-y: auto;
