--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -780,6 +780,15 @@ div.input-group-append input.select2-search__field {
     height: 38px !important;
 }
 
+/* select2 */
+.select2-container .select2-selection--single {
+    /* same as .custom-select */
+    height: calc(1.5em + .75rem + 2px) !important;
+}
+.select2-selection__arrow{
+    display: none !important;
+}
+
 /* BMD APPLICATION STYLES */
 
 /* BMD output table */
