add validation check

--- a/hawc/apps/assessment/templates/assessment/fragments/publish_item_td.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/publish_item_td.html
@@ -7,4 +7,5 @@
       <span class="fa fa-spin fa-spinner float-right htmx-indicator"></span>
     </div>
   </form>
+  {% if can_update_message %}<span class="text-danger">{{can_update_message}}</span>{% endif %}
 </td>
