remove a few additions

--- a/hawc/apps/assessment/templates/assessment/fragments/attachment_list.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/attachment_list.html
@@ -1,4 +1,4 @@
-<div class="hide-empty-tbody" id="attach_table">
+<div class="hide-empty-tbody">
   <h2>Attachments</h2>
   <table class="table table-sm table-striped">
     {% if canEdit or permissions.edit %}
